Fixed landing spacing. Styled range and buttons.

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,9 @@
-.App {
-  background: url(/assets/images/blurred_backgrounds/blur_bg_3.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 a {
   font-size: 20px;
   color: #da6d99;
   text-decoration: none;
   font-family: 'Raleway', sans-serif;
+  padding: 45px;
 }
 
 a:hover {
@@ -20,7 +13,6 @@ a:hover {
 header {
   display: block;
   padding-top: 10px;
-  word-spacing: 0.5em;
   text-align: center;
 }
 
@@ -28,10 +20,10 @@ nav {
   display: block;
 }
 
-.logo {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding-top: 15px;
-  padding-bottom: 0;
+  padding-bottom: 15px;
 }
